k8s/notification/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: adan762/notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8005
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8005
            initialDelaySeconds: 30
