k8s/notification/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - port: 8005
      targetPort: 8005
  type: ClusterIP
