k8s/notification/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tinka.local
      http:
        paths:
          - path: /api/notification(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: notification
                port:
                  number: 8005
